# ResponseMCP

./: .dockerignore  Dockerfile  README.md  pyproject.toml  response-mcp-showcase.html
.github/: copilot-instructions.md
docs/: response-mcp-showcase.html
infra/: deploy-container.ps1  deploy-infrastructure.ps1  main.bicep
response_mcp/: __init__.py  auth.py  client.py  server_sse.py
